finalizando segunda section

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&family=Poppins:wght@400;500;600;700&display=swap"
         rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@1,600&display=swap" rel="stylesheet">    
+    <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css"/>
     <link rel="stylesheet" href="./css/main.css">
     <title>Portifólio - Guilherme Leoni</title>
 </head>
@@ -56,60 +57,131 @@
         <div class="container">
             <div class="main-area-servicos">
                 <div class="right-area-servicos">
+                    <div class="text">
+                        <h2>Tecnologias que eu utilizo</h2>
+                        <span>Algumas ainda ando me aperfeiçoando.</span>
+                    </div>
                     <div class="linguagens">
-                        <div class="item">
-                            <div class="item-img" id="item-img01">
-                                <img src="./img/icon-html.svg" alt="">
-                            </div>
-                            <h6>HTML</h6>
-                            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
-                            <div class="porcentagem">
-                                <div class="sub-porcentagem">
-                                    <span>80%</span>
+                        <div class="aviso-cards">
+                            <span>movimente os cards para mais opções!</span>
+                        </div>
+                        <div class="swiper-pagination"></div>
+                        <div class="swiper-wrapper">
+                            <div class="swiper-slide">
+                                <div class="item">
+                                    <div class="item-img" id="item-img01">
+                                        <img src="./img/icon-html.svg" alt="">
+                                    </div>
+                                    <h6>HTML</h6>
+                                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+                                    <div class="porcentagem">
+                                        <div class="sub-porcentagem" id="sub-01">
+                                            <span>80%</span>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
-                        </div>
-                        <div class="item">
-                            <div class="item-img" id="item-img02">
-                                <img src="./img/javascript-svgrepo-com.svg" alt="">
-                            </div>
-                            <h6>JAVASCRIPT</h6>
-                            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
-                            <div class="porcentagem">
-                                <div class="sub-porcentagem">
-                                    <span>45%</span>
+                            <div class="swiper-slide">
+                                <div class="item">
+                                    <div class="item-img" id="item-img02">
+                                        <img src="./img/javascript-svgrepo-com.svg" alt="">
+                                    </div>
+                                    <h6>JAVASCRIPT</h6>
+                                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+                                    <div class="porcentagem">
+                                        <div class="sub-porcentagem" id="sub-02">
+                                            <span>45%</span>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
-                        </div>
-                        <div class="item">
-                            <div class="item-img" id="item-img03">
-                                <img src="./img/css-svgrepo-com.svg" alt="">
-                            </div>
-                            <h6>CSS</h6>
-                            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
-                            <div class="porcentagem">
-                                <div class="sub-porcentagem">
-                                    <span>70%</span>
+                            <div class="swiper-slide">
+                                <div class="item">
+                                    <div class="item-img" id="item-img03">
+                                        <img src="./img/css-svgrepo-com.svg" alt="">
+                                    </div>
+                                    <h6>CSS</h6>
+                                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+                                    <div class="porcentagem">
+                                        <div class="sub-porcentagem" id="sub-03">
+                                            <span>75%</span>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
-                        </div>
-                        <div class="item">
-                            <div class="item-img" id="item-img04">
-                                <img src="./img/icon-scss.png" alt="">
+                            <div class="swiper-slide">
+                                <div class="item">
+                                    <div class="item-img" id="item-img04">
+                                        <img src="./img/icon-scss.png" alt="">
+                                    </div>
+                                    <h6>SASSS</h6>
+                                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+                                    <div class="porcentagem">
+                                        <div class="sub-porcentagem" id="sub-04">
+                                            <span>70%</span>
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
-                            <h6>SASS</h6>
-                            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
-                            <div class="porcentagem">
-                                <div class="sub-porcentagem">
-                                    <span>75%</span>
+                            <div class="swiper-slide">
+                                <div class="item">
+                                    <div class="item-img" id="item-img05">
+                                        <img src="./img/wordpress-svgrepo-com.svg" alt="">
+                                    </div>
+                                    <h6>WORDPRESS</h6>
+                                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+                                    <div class="porcentagem">
+                                        <div class="sub-porcentagem" id="sub-05">
+                                            <span>50%</span>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="swiper-slide">
+                                <div class="item">
+                                    <div class="item-img" id="item-img06">
+                                        <img src="./img/python-svgrepo-com.svg" alt="">
+                                    </div>
+                                    <h6>PYTHON</h6>
+                                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+                                    <div class="porcentagem">
+                                        <div class="sub-porcentagem" id="sub-06">
+                                            <span>85%</span>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
+                <div class="tec-info">
+                    <div class="text">
+                        <h3>Atualmente estou me aperfeiçoando no front-end!</h3>
+                        <p>Tenho um grande dominío sobre as tecnologias citadas a cima, especificamentes as linguagens voltadas para o front-end, as quais estão sendo concetradas os meus estudos no momento.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="s-sobre">
+        <div class="container">
+            <div class="main-sobre">
+                <h1>Sobre min</h1>
             </div>
         </div>
     </section>
     <script src="./js/index.js" ></script>
+    <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+            var swiper = new Swiper(".linguagens", {
+            slidesPerView: 3,
+            spaceBetween: 32,
+            pagination: {
+                el: ".s-servicos .container .main-area-servicos .right-area-servicos .swiper-pagination",
+                clickable: true,
+            },
+        });
+    </script>
 </body>
 </html>
