--- a/index.html
+++ b/index.html
@@ -257,6 +257,39 @@
             </div>
         </div>
     </section>
+    <footer>
+        <div class="background-footer">
+            <div class="main-contato">
+                <span>Podemos ser parceiros</span>
+                <h2>Gostou do trabalho?</h2>
+                <a href="" class="btn btn-second">Claro! vamos conversar</a>
+            </div>
+        </div>
+            <div class="container">
+                <nav>
+                    <ul>
+                        <li><div class="img-social">
+                            <img src="./img/facebook-svgrepo-com.svg" alt="">
+                        </div></li>
+                        <li><div class="img-social">
+                            <img src="./img/whatsapp-svgrepo-com.svg" alt="">
+                        </div></li>
+                        <li><div class="img-social">
+                            <img src="./img/instagram-svgrepo-com.svg" alt="">
+                        </div></li>
+                        <li><div class="img-social">
+                            <img src="./img/twitter-svgrepo-com.svg" alt="">
+                        </div></li>
+                        <li><div class="img-social">
+                            <img src="./img/linkedin-svgrepo-com.svg" alt="">
+                        </div></li>
+                        <li><div class="img-social">
+                            <img src="./img/github-svgrepo-com.svg" alt="">
+                        </div></li>
+                    </ul>
+                </nav>
+            </div>
+    </footer>
     <script src="./js/index.js" ></script>
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
