--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <title>Portifólio - Guilherme Leoni</title>
 </head>
 <body>
-    <header>
+    <header class="js-header">
         <div class="container">
             <div class="logo">
                 <img src="./img/logo.png" alt="">
@@ -27,7 +27,7 @@
                     <li><a href="#">Serviços</a></li>
                     <li><a href="#">Habilidades</a></li>
                 </ul>
-                <a class="btn btn-primary" href="#">Conversar Whatsapp</a>
+                <a class="btn btn-primary" href="#">Converse comigo</a>
             </nav>
         </div>
     </header>
@@ -288,14 +288,24 @@
                         </div></li>
                     </ul>
                 </nav>
+                <div class="f-footer">
+                    <span>© Copyright 2021 Desenvolvido por Guilherme dos Reis Leoni</span>
+                    <span>guileone167@gmail.com</span>
+                </div>
             </div>
     </footer>
     <script src="./js/index.js" ></script>
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
+            var largura = window.screen.width;
+            if (largura <= 991){
+                altura = 2
+            }else{
+                altura = 3
+            }
             var swiper = new Swiper(".linguagens", {
-            slidesPerView: 3,
+            slidesPerView: altura,
             spaceBetween: 32,
             pagination: {
                 el: ".s-servicos .container .main-area-servicos .right-area-servicos .swiper-pagination",
