--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                     </p>
                 </div>
                 <div class="img-home" data-aos="fade-left">
-                    <img src="./img/autor.jpg" alt="">
+                    <img src="./img/autor.jpg" id="minha-foto" alt="">
                     <div class="socias-home">
                         <ul>
                             <li><a href="#"><img src="./img/instagram.png" alt=""></a></li>
@@ -96,7 +96,7 @@
                                     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
                                     <div class="porcentagem">
                                         <div class="sub-porcentagem" id="sub-01">
-                                            <span>80%</span>
+                                            <span>60%</span>
                                         </div>
                                     </div>
                                 </div>
@@ -110,7 +110,7 @@
                                     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
                                     <div class="porcentagem">
                                         <div class="sub-porcentagem" id="sub-02">
-                                            <span>45%</span>
+                                            <span>25%</span>
                                         </div>
                                     </div>
                                 </div>
@@ -124,7 +124,7 @@
                                     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
                                     <div class="porcentagem">
                                         <div class="sub-porcentagem" id="sub-03">
-                                            <span>75%</span>
+                                            <span>55%</span>
                                         </div>
                                     </div>
                                 </div>
@@ -138,7 +138,7 @@
                                     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
                                     <div class="porcentagem">
                                         <div class="sub-porcentagem" id="sub-04">
-                                            <span>70%</span>
+                                            <span>60%</span>
                                         </div>
                                     </div>
                                 </div>
@@ -152,7 +152,7 @@
                                     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
                                     <div class="porcentagem">
                                         <div class="sub-porcentagem" id="sub-05">
-                                            <span>50%</span>
+                                            <span>20%</span>
                                         </div>
                                     </div>
                                 </div>
@@ -166,7 +166,7 @@
                                     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
                                     <div class="porcentagem">
                                         <div class="sub-porcentagem" id="sub-06">
-                                            <span>85%</span>
+                                            <span>65%</span>
                                         </div>
                                     </div>
                                 </div>
