--- a/index.html
+++ b/index.html
@@ -353,7 +353,7 @@
         AOS.init({
             duration: 1000,
             once: true,
-            // disable: 'mobile', //para a animação acontecer somente uma vez
+            disable: 'mobile', //para a animação acontecer somente uma vez
         });
     </script>
 </body>
