--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     <li><a href="#section-servicos">Habilidades</a></li>
                     <li><a href="#section-sobre">Sobre</a></li>
                 </ul>
-                <a class="btn btn-primary" href="#">Converse comigo</a>
+                <a class="btn btn-primary" href="https://api.whatsapp.com/send/?phone=5535999979041&text&app_absent=0" target="_blank">Converse comigo</a>
             </nav>
             <img src="./img/menu-hamburger.svg" class="img-mobile" id="js-btn-menu-mobile" alt="">
         </div>
@@ -46,7 +46,7 @@
                         <li><a href="#section-servicos">Habilidades</a></li>
                         <li><a href="#section-sobre">Sobre</a></li>
                     </ul>
-                    <a class="btn btn-primary" href="#">Converse comigo</a>
+                    <a class="btn btn-primary"href="https://api.whatsapp.com/send/?phone=5535999979041&text&app_absent=0" target="_blank">Converse comigo</a>
                 </nav>
             </aside>
         </div>
@@ -56,17 +56,17 @@
             <div class="main-home">
                 <div class="text-home" data-aos="fade-right">
                     <h1>Guilherme<br><span>Leoni</span></h1>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum alias laudantium magnam deleniti quaerat rerum ut perspiciatis vero, laboriosam suscipit ipsa explicabo et cumque consequuntur praesentium maxime libero rem deserunt.
+                    <p>Me chamo Guilherme dos Reis Leoni, aqui está contido o meu portifólio pessoal, que tem como objetivo principal demonstrar as minhas habilidades e compências relacionadas a programação. Ele foi desenvolvido utilizando: Html, Css, Scss e JavaScript e algumas bibliotecas externas para realizar certas interatividades.
                     </p>
                 </div>
                 <div class="img-home" data-aos="fade-left">
                     <img src="./img/autor.jpg" id="minha-foto" alt="">
                     <div class="socias-home">
                         <ul>
-                            <li><a href="#"><img src="./img/instagram.png" alt=""></a></li>
-                            <li><a href="#"><img src="./img/facebook.png" alt=""></a></li>
-                            <li><a href="#"><img src="./img/linkedin.png" alt=""></a></li>
-                            <li><a href="#"><img src="./img/whatsapp.png" alt=""></a></li>
+                            <li><a href="https://www.instagram.com/gui_leoni14/" target="_blank"><img src="./img/instagram.png" alt=""></a></li>
+                            <li><a href="https://www.facebook.com/profile.php?id=100008991276235" target="_blank"><img src="./img/facebook.png" alt=""></a></li>
+                            <li><a href="https://www.linkedin.com/in/guileoni14/" target="_blank"><img src="./img/linkedin.png" alt=""></a></li>
+                            <li><a href="https://api.whatsapp.com/send/?phone=5535999979041&text&app_absent=0" target="_blank"><img src="./img/whatsapp.png" alt=""></a></li>
                         </ul>
                     </div>
                 </div>
@@ -93,7 +93,7 @@
                                         <img src="./img/icon-html.svg" alt="">
                                     </div>
                                     <h6>HTML</h6>
-                                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+                                    <p>Linguagem de marcação, responsavél pela estrutura do site.</p>
                                     <div class="porcentagem">
                                         <div class="sub-porcentagem" id="sub-01">
                                             <span>60%</span>
@@ -107,7 +107,7 @@
                                         <img src="./img/javascript-svgrepo-com.svg" alt="">
                                     </div>
                                     <h6>JAVASCRIPT</h6>
-                                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+                                    <p>Linguagem de programação, responsavél pelas interações do site.</p>
                                     <div class="porcentagem">
                                         <div class="sub-porcentagem" id="sub-02">
                                             <span>25%</span>
@@ -121,7 +121,7 @@
                                         <img src="./img/css-svgrepo-com.svg" alt="">
                                     </div>
                                     <h6>CSS</h6>
-                                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+                                    <p>Linguagem de estilo, responsavél pela estilização do site.</p>
                                     <div class="porcentagem">
                                         <div class="sub-porcentagem" id="sub-03">
                                             <span>55%</span>
@@ -135,7 +135,7 @@
                                         <img src="./img/icon-scss.png" alt="">
                                     </div>
                                     <h6>SASSS</h6>
-                                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+                                    <p>Linguagem de estilo, utilizada para compilar arquivos css de maneira intuitiva.</p>
                                     <div class="porcentagem">
                                         <div class="sub-porcentagem" id="sub-04">
                                             <span>60%</span>
@@ -149,7 +149,7 @@
                                         <img src="./img/wordpress-svgrepo-com.svg" alt="">
                                     </div>
                                     <h6>WORDPRESS</h6>
-                                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+                                    <p>Ferramenta utilizida para criação e gerenciamento de sites.</p>
                                     <div class="porcentagem">
                                         <div class="sub-porcentagem" id="sub-05">
                                             <span>20%</span>
@@ -163,7 +163,7 @@
                                         <img src="./img/python-svgrepo-com.svg" alt="">
                                     </div>
                                     <h6>PYTHON</h6>
-                                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+                                    <p>Linguagem de programação, bastante utilizada para back-end.</p>
                                     <div class="porcentagem">
                                         <div class="sub-porcentagem" id="sub-06">
                                             <span>65%</span>
@@ -196,7 +196,7 @@
                         <li><img src="./img/icon-book.svg" alt=""><span>Cursando técnico em informática no IF Machado.</span></li>
                         <li><img src="./img/icon-comp.svg" alt=""><span>Adoro programar e tudo relacionado a tecnologia.</span></li>
                     </ul>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellendus molestias illum fugit quas sed pariatur sint saepe rerum sequi quos unde, hic minima exercitationem rem nulla officiis reprehenderit magni deleniti?</p>
+                    <p>Conheci o "mundo" da programção quando me matriculei no curso técnico em informática(IFMCH) em 2019, comecei a estudar linguagens como C++ e Java. Ao passardo tempo parti para algumas outras linguagens e flameworks, até que em 2020, decidi focar no front-end e concentrar todos os meus estudos nessa área.</p>
                 </div>
                 <div class="sobre-right">
                     <h2 data-aos="fade-left">Projetos</h2>
@@ -282,30 +282,30 @@
             <div class="main-contato">
                 <span>Podemos ser parceiros</span>
                 <h2>Gostou do trabalho?</h2>
-                <a href="" class="btn btn-second">Claro! vamos conversar</a>
+                <a href="https://api.whatsapp.com/send/?phone=5535999979041&text&app_absent=0" target="_blank class="btn btn-second">Claro! vamos conversar</a>
             </div>
         </div>
             <div class="container" data-aos="fade-up">
                 <nav>
                     <ul>
-                        <li><div class="img-social">
+                        <li><a href="https://www.facebook.com/profile.php?id=100008991276235" target="_blank"><div class="img-social">
                             <img src="./img/facebook-svgrepo-com.svg" alt="">
-                        </div></li>
-                        <li><div class="img-social">
+                        </div></a></li>
+                        <li><a href="https://api.whatsapp.com/send/?phone=5535999979041&text&app_absent=0" target="_blank"><div class="img-social">
                             <img src="./img/whatsapp-svgrepo-com.svg" alt="">
-                        </div></li>
-                        <li><div class="img-social">
+                        </div></a></li>
+                        <li><a href="https://www.instagram.com/gui_leoni14/" target="_blank"><div class="img-social">
                             <img src="./img/instagram-svgrepo-com.svg" alt="">
-                        </div></li>
-                        <li><div class="img-social">
+                        </div></a></li>
+                        <li><a href="https://twitter.com/Guilher12621082" target="_blank"><div class="img-social">
                             <img src="./img/twitter-svgrepo-com.svg" alt="">
-                        </div></li>
-                        <li><div class="img-social">
+                        </div></a></li>
+                        <li><a href="https://www.linkedin.com/in/guileoni14/" target="_blank"><div class="img-social">
                             <img src="./img/linkedin-svgrepo-com.svg" alt="">
-                        </div></li>
-                        <li><div class="img-social">
+                        </div></a></li>
+                        <li><a href="https://github.com/GuiLeoni14" target="_blank"><div class="img-social">
                             <img src="./img/github-svgrepo-com.svg" alt="">
-                        </div></li>
+                        </div></a></li>
                     </ul>
                 </nav>
                 <div class="f-footer">
