--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                         <li><a href="#section-servicos">Habilidades</a></li>
                         <li><a href="#section-sobre">Sobre</a></li>
                     </ul>
-                    <a class="btn btn-primary"href="https://api.whatsapp.com/send/?phone=5535999979041&text&app_absent=0" target="_blank">Converse comigo</a>
+                    <a class="btn btn-primary" href="https://api.whatsapp.com/send/?phone=5535999979041&text&app_absent=0" target="_blank">Converse comigo</a>
                 </nav>
             </aside>
         </div>
@@ -283,7 +283,7 @@
             <div class="main-contato">
                 <span>Podemos ser parceiros</span>
                 <h2>Gostou do trabalho?</h2>
-                <a href="https://api.whatsapp.com/send/?phone=5535999979041&text&app_absent=0" target="_blank class="btn btn-second">Claro! vamos conversar</a>
+                <a href="https://api.whatsapp.com/send/?phone=5535999979041&text&app_absent=0" target="_blank" class="btn btn-second">Claro! vamos conversar</a>
             </div>
         </div>
             <div class="container" data-aos="fade-up">
