--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
                             </div>
                             <div class="swiper-slide">
                                 <div class="card-projetos">
-                                    <img src="./img/neon-twt.png" alt="">
+                                    <img src="./img/neon-coments.PNG" alt="">
                                     
                                 </div>
                             </div>  
