--- a/index.html
+++ b/index.html
@@ -95,11 +95,11 @@
                                     </div>
                                     <h6>HTML</h6>
                                     <p>Linguagem de marcação, responsavél pela estrutura do site.</p>
-                                    <div class="porcentagem">
+                                    <!-- <div class="porcentagem">
                                         <div class="sub-porcentagem" id="sub-01">
                                             <span>60%</span>
                                         </div>
-                                    </div>
+                                    </div> -->
                                 </div>
                             </div>
                             <div class="swiper-slide" data-aos="fade-up">
@@ -109,11 +109,11 @@
                                     </div>
                                     <h6>JAVASCRIPT</h6>
                                     <p>Linguagem de programação, responsavél pelas interações do site.</p>
-                                    <div class="porcentagem">
+                                    <!-- <div class="porcentagem">
                                         <div class="sub-porcentagem" id="sub-02">
                                             <span>25%</span>
                                         </div>
-                                    </div>
+                                    </div> -->
                                 </div>
                             </div>
                             <div class="swiper-slide" data-aos="fade-left">
@@ -123,11 +123,11 @@
                                     </div>
                                     <h6>CSS</h6>
                                     <p>Linguagem de estilo, responsavél pela estilização do site.</p>
-                                    <div class="porcentagem">
+                                    <!-- <div class="porcentagem">
                                         <div class="sub-porcentagem" id="sub-03">
                                             <span>55%</span>
                                         </div>
-                                    </div>
+                                    </div> -->
                                 </div>
                             </div>
                             <div class="swiper-slide">
@@ -137,11 +137,11 @@
                                     </div>
                                     <h6>SASSS</h6>
                                     <p>Linguagem de estilo, utilizada para compilar arquivos css de maneira intuitiva.</p>
-                                    <div class="porcentagem">
+                                    <!-- <div class="porcentagem">
                                         <div class="sub-porcentagem" id="sub-04">
                                             <span>60%</span>
                                         </div>
-                                    </div>
+                                    </div> -->
                                 </div>
                             </div>
                             <div class="swiper-slide">
@@ -151,11 +151,11 @@
                                     </div>
                                     <h6>WORDPRESS</h6>
                                     <p>Ferramenta utilizida para criação e gerenciamento de sites.</p>
-                                    <div class="porcentagem">
+                                    <!-- <div class="porcentagem">
                                         <div class="sub-porcentagem" id="sub-05">
                                             <span>20%</span>
                                         </div>
-                                    </div>
+                                    </div> -->
                                 </div>
                             </div>
                             <div class="swiper-slide">
@@ -165,11 +165,11 @@
                                     </div>
                                     <h6>PYTHON</h6>
                                     <p>Linguagem de programação, bastante utilizada para back-end.</p>
-                                    <div class="porcentagem">
+                                    <!-- <div class="porcentagem">
                                         <div class="sub-porcentagem" id="sub-06">
                                             <span>65%</span>
                                         </div>
-                                    </div>
+                                    </div> -->
                                 </div>
                             </div>
                         </div>
