--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css"/>
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="./css/main.css">
-    <title>Portifólio - Guilherme Leoni</title>
+    <title>Portfólio - Guilherme Leoni</title>
 </head>
 <body>
     <header class="js-header">
@@ -57,7 +57,7 @@
             <div class="main-home">
                 <div class="text-home" data-aos="fade-right">
                     <h1>Guilherme<br><span>Leoni</span></h1>
-                    <p>Me chamo Guilherme dos Reis Leoni, aqui está contido o meu portifólio pessoal, que tem como objetivo principal demonstrar as minhas habilidades e compências relacionadas a programação. Ele foi desenvolvido utilizando: Html, Css, Scss e JavaScript e algumas bibliotecas externas para realizar certas interatividades.
+                    <p>Me chamo Guilherme dos Reis Leoni, aqui está contido o meu portfólio pessoal, que tem como objetivo principal demonstrar as minhas habilidades e compências relacionadas a programação. Ele foi desenvolvido utilizando: Html, Css, Scss e JavaScript e algumas bibliotecas externas para realizar certas interatividades.
                     </p>
                 </div>
                 <div class="img-home" data-aos="fade-left">
@@ -135,8 +135,8 @@
                                     <div class="item-img" id="item-img04">
                                         <img src="./img/icon-scss.png" alt="">
                                     </div>
-                                    <h6>SASSS</h6>
-                                    <p>Linguagem de estilo, utilizada para compilar arquivos css de maneira intuitiva.</p>
+                                    <h6>SASS</h6>
+                                    <p>Pré-processador, CSS DE nível profissional mais madura, estável e poderosa.</p>
                                     <!-- <div class="porcentagem">
                                         <div class="sub-porcentagem" id="sub-04">
                                             <span>60%</span>
@@ -197,7 +197,7 @@
                         <li><img src="./img/icon-book.svg" alt=""><span>Cursando técnico em informática no IF Machado.</span></li>
                         <li><img src="./img/icon-comp.svg" alt=""><span>Adoro programar e tudo relacionado a tecnologia.</span></li>
                     </ul>
-                    <p>Conheci o "mundo" da programção quando me matriculei no curso técnico em informática(IFMCH) em 2019, comecei a estudar linguagens como C++ e Java. Ao passardo tempo parti para algumas outras linguagens e flameworks, até que em 2020, decidi focar no front-end e concentrar todos os meus estudos nessa área.</p>
+                    <p>Conheci o "mundo" da programção quando me matriculei no curso técnico em informática(IFMCH) em 2019, comecei a estudar linguagens como C++ e Java. Ao passardo tempo parti para algumas outras linguagens e frameworks, até que em 2020, decidi focar no front-end e concentrar todos os meus estudos nessa área.</p>
                 </div>
                 <div class="sobre-right">
                     <h2 data-aos="fade-left">Projetos</h2>
