--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                                         <img src="./img/icon-scss.png" alt="">
                                     </div>
                                     <h6>SASS</h6>
-                                    <p>Pré-processador, CSS DE nível profissional mais madura, estável e poderosa.</p>
+                                    <p>Pré-processador CSS de nível profissional, mais maduro, estável e poderoso.</p>
                                     <!-- <div class="porcentagem">
                                         <div class="sub-porcentagem" id="sub-04">
                                             <span>60%</span>
