--- a/index.html
+++ b/index.html
@@ -90,11 +90,25 @@
                         <div class="swiper-wrapper">
                             <div class="swiper-slide" data-aos="fade-right">
                                 <div class="item">
+                                    <div class="item-img" id="item-img07">
+                                        <img src="./img/icon-react.svg" alt="">
+                                    </div>
+                                    <h6>REACT JS</h6>
+                                    <p>Biblioteca JavaScript declarativa, eficiente e flexível para criar interfaces.</p>
+                                    <!-- <div class="porcentagem">
+                                        <div class="sub-porcentagem" id="sub-01">
+                                            <span>60%</span>
+                                        </div>
+                                    </div> -->
+                                </div>
+                            </div>
+                            <div class="swiper-slide" data-aos="fade-right">
+                                <div class="item">
                                     <div class="item-img" id="item-img01">
                                         <img src="./img/icon-html.svg" alt="">
                                     </div>
                                     <h6>HTML</h6>
-                                    <p>Linguagem de marcação, responsavél pela estrutura do site.</p>
+                                    <p>Linguagem de marcação, responsável pela estrutura do site.</p>
                                     <!-- <div class="porcentagem">
                                         <div class="sub-porcentagem" id="sub-01">
                                             <span>60%</span>
@@ -108,7 +122,7 @@
                                         <img src="./img/javascript-svgrepo-com.svg" alt="">
                                     </div>
                                     <h6>JAVASCRIPT</h6>
-                                    <p>Linguagem de programação, responsavél pelas interações do site.</p>
+                                    <p>Linguagem de programação, responsável pelas interações do site.</p>
                                     <!-- <div class="porcentagem">
                                         <div class="sub-porcentagem" id="sub-02">
                                             <span>25%</span>
@@ -122,7 +136,7 @@
                                         <img src="./img/css-svgrepo-com.svg" alt="">
                                     </div>
                                     <h6>CSS</h6>
-                                    <p>Linguagem de estilo, responsavél pela estilização do site.</p>
+                                    <p>Linguagem de estilo, responsável pela estilização do site.</p>
                                     <!-- <div class="porcentagem">
                                         <div class="sub-porcentagem" id="sub-03">
                                             <span>55%</span>
@@ -150,7 +164,7 @@
                                         <img src="./img/wordpress-svgrepo-com.svg" alt="">
                                     </div>
                                     <h6>WORDPRESS</h6>
-                                    <p>Ferramenta utilizida para criação e gerenciamento de sites.</p>
+                                    <p>Ferramenta utilizada para criação e gerenciamento de sites.</p>
                                     <!-- <div class="porcentagem">
                                         <div class="sub-porcentagem" id="sub-05">
                                             <span>20%</span>
@@ -172,6 +186,20 @@
                                     </div> -->
                                 </div>
                             </div>
+                            <div class="swiper-slide" data-aos="fade-right">
+                                <div class="item">
+                                    <div class="item-img" id="item-img08">
+                                        <img src="./img/icon-gulp.svg" alt="">
+                                    </div>
+                                    <h6>GULP JS</h6>
+                                    <p>Usado como um sistema de criação de streaming no desenvolvimento front-end.</p>
+                                    <!-- <div class="porcentagem">
+                                        <div class="sub-porcentagem" id="sub-01">
+                                            <span>60%</span>
+                                        </div>
+                                    </div> -->
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -188,10 +216,10 @@
         <div class="container">
             <div class="main-sobre">
                 <div class="sobre-left" data-aos="fade-right">
-                    <h2>Sobre min:</h2>
+                    <h2>Sobre mim:</h2>
                     <ul>
                         <li><img src="./img/icon-person.svg" alt=""><span>Me chamo Guilherme dos Reis Leoni.</span></li>
-                        <li><img src="./img/icon-person.svg" alt=""><span>Tenho 17 anos.</span></li>
+                        <li><img src="./img/icon-person.svg" alt=""><span>Tenho 18 anos.</span></li>
                         <li><img src="./img/icon-house.svg" alt=""><span>Moro em Paraguaçu-MG.</span></li>
                         <li><img src="./img/icon-code.svg" alt=""><span>Estudo programação desde 2020.</span></li>
                         <li><img src="./img/icon-book.svg" alt=""><span>Cursando técnico em informática no IF Machado.</span></li>
