--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
                         <li><img src="./img/icon-person.svg" alt=""><span>Tenho 18 anos.</span></li>
                         <li><img src="./img/icon-house.svg" alt=""><span>Moro em Paraguaçu-MG.</span></li>
                         <li><img src="./img/icon-code.svg" alt=""><span>Estudo programação desde 2020.</span></li>
-                        <li><img src="./img/icon-book.svg" alt=""><span>Cursando técnico em informática no IF Machado.</span></li>
+                        <li><img src="./img/icon-book.svg" alt=""><span>Cursando técnico em Desenvolvimento de Sistemas no IFSULDEMINAS - Campus Poços de Caldas.</span></li>
                         <li><img src="./img/icon-comp.svg" alt=""><span>Adoro programar e tudo relacionado a tecnologia.</span></li>
                     </ul>
                     <p>Conheci o "mundo" da programção quando me matriculei no curso técnico em informática(IFMCH) em 2019, comecei a estudar linguagens como C++ e Java. Ao passar do tempo parti para algumas outras linguagens e frameworks, até que em 2020, decidi focar no front-end e concentrar todos os meus estudos nessa área.</p>
