--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
                 <div class="tec-info" data-aos="fade-up">
                     <div class="text">
                         <h3>Atualmente estou me aperfeiçoando no front-end!</h3>
-                        <p>Tenho um grande dominío sobre as tecnologias citadas a cima, especificamentes as linguagens voltadas para o front-end, as quais estão sendo concetradas os meus estudos no momento.</p>
+                        <p>Tenho um grande domínio sobre as tecnologias citadas acima, especificamente as linguagens voltadas para o front-end, as quais estão sendo concentradas os meus estudos no momento.</p>
                     </div>
                 </div>
             </div>
