--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                     <div class="socias-home">
                         <ul>
                             <li><a href="https://www.instagram.com/gui_leoni14/" target="_blank"><img src="./img/instagram.png" alt=""></a></li>
-                            <li><a href="https://www.facebook.com/profile.php?id=100008991276235" target="_blank"><img src="./img/facebook.png" alt=""></a></li>
+                            <!-- <li><a href="https://www.facebook.com/profile.php?id=100008991276235" target="_blank"><img src="./img/facebook.png" alt=""></a></li> -->
                             <li><a href="https://www.linkedin.com/in/guileoni14/" target="_blank"><img src="./img/linkedin.png" alt=""></a></li>
                             <li><a href="https://api.whatsapp.com/send/?phone=5535999979041&text&app_absent=0" target="_blank"><img src="./img/whatsapp.png" alt=""></a></li>
                         </ul>
@@ -317,9 +317,9 @@
             <div class="container" data-aos="fade-up">
                 <nav>
                     <ul>
-                        <li><a href="https://www.facebook.com/profile.php?id=100008991276235" target="_blank"><div class="img-social">
+                        <!-- <li><a href="https://www.facebook.com/profile.php?id=100008991276235" target="_blank"><div class="img-social">
                             <img src="./img/facebook-svgrepo-com.svg" alt="">
-                        </div></a></li>
+                        </div></a></li> -->
                         <li><a href="https://api.whatsapp.com/send/?phone=5535999979041&text&app_absent=0" target="_blank"><div class="img-social">
                             <img src="./img/whatsapp-svgrepo-com.svg" alt="">
                         </div></a></li>
