--- a/index.html
+++ b/index.html
@@ -326,9 +326,9 @@
                         <li><a href="https://www.instagram.com/gui_leoni14/" target="_blank"><div class="img-social">
                             <img src="./img/instagram-svgrepo-com.svg" alt="">
                         </div></a></li>
-                        <li><a href="https://twitter.com/Guilher12621082" target="_blank"><div class="img-social">
+                        <!-- <li><a href="https://twitter.com/Guilher12621082" target="_blank"><div class="img-social">
                             <img src="./img/twitter-svgrepo-com.svg" alt="">
-                        </div></a></li>
+                        </div></a></li> -->
                         <li><a href="https://www.linkedin.com/in/guileoni14/" target="_blank"><div class="img-social">
                             <img src="./img/linkedin-svgrepo-com.svg" alt="">
                         </div></a></li>
