feat: update image autor

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                     </p>
                 </div>
                 <div class="img-home" data-aos="fade-left">
-                    <img src="./img/autor.jpg" id="minha-foto" alt="">
+                    <img src="./img/autor.jfif" id="minha-foto" alt="Guilherme Leoni">
                     <div class="socias-home">
                         <ul>
                             <li><a href="https://www.instagram.com/gui_leoni14/" target="_blank"><img src="./img/instagram.png" alt=""></a></li>
